<resources>
    <string name="app_name">Rekindle</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="client_id">430626030464-sh814ferrcqero8lbe7u5briaft988d0.apps.googleusercontent.com</string>
    <string name="review_ncollaborate_nlearn_nrekindle">Review.\nCollaborate.\nLearn.\nRekindle.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="sign_out">Sign out</string>
    <string name="my_profile">My Profile</string>
    <string name="achievements">Achievements</string>
    <string name="biology">Biology</string>
    <string name="what_is_the_powerhouse_of_the_cell">What is the powerhouse of the cell?</string>
    <string name="mitochondria">Mitochondria</string>
    <string name="wrong_answer">Wrong answer</string>
    <string name="these_are_decoy_answers_which_will_only_be_used_for_this_thread_s_mock_quiz">These are decoy answers which will only be used for this thread’s mock quiz.</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="decoy_answer_1">Decoy Answer 1</string>
    <string name="decoy_answer_2">Decoy Answer 2</string>
    <string name="collection_name">Collection name</string>
    <string name="create_new_nflashcard_collection">Create new\nFlashcard Collection</string>
    <string name="create_a_nflashcard">Create a\nFlashcard</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="my_nflashcards">My\nFlashcards</string>
    <string name="review">Review</string>
    <string name="add_flashcard">Add Flashcard</string>
    <string name="title_activity_copy_thread_code">CopyThreadCode</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="edit_nflashcard_collection">Edit\nFlashcard collection</string>
    <string name="edit_nflashcard">Edit\nFlashcard</string>
    <string name="flip">Flip</string>
    <string name="my_nthreads">My\nThreads</string>
    <string name="when_this_thread_is_closed_there_will_be_a_mock_quiz_for_every_member_of_this_thread_n_n_only_members_who_have_competitive_mode_turned_on_are_able_to_join_the_mock_quiz">When this thread is closed, there will be a mock quiz for every member of this thread.\n\n*Only members who have competitive mode turned on are able to join the mock quiz.</string>
    <string name="thread_name">Thread name</string>
    <string name="create_a_nnew_thread">Create a\nnew Thread</string>
    <string name="or">or</string>
    <string name="join_a_thread">Join a Thread</string>
    <string name="instead">instead.</string>
    <string name="join">Join</string>
    <string name="type_code">Type code</string>
    <string name="copy">Copy</string>
    <string name="dismiss">Dismiss</string>
    <string name="copy_thread_code">Copy thread code</string>
    <string name="view_members">View members</string>
    <string name="close_thread">Close thread</string>
    <string name="leave_thread">Leave thread</string>
    <string name="kick">Kick</string>
    <string name="currentMember">currentMember</string>
    <string name="threadID">threadID</string>
    <string name="delete_thread">Delete Thread</string>
</resources>