<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_bg"
    tools:context=".ThreadSettings">

    <include
        android:id="@+id/include4"
        layout="@layout/header_with_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include4"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/copy_thread_code"
            android:paddingVertical="15dp"
            android:paddingHorizontal="26dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/copy_thread_code"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <include layout="@layout/line_margin"/>

        <TextView
            android:id="@+id/view_members"
            android:paddingVertical="15dp"
            android:paddingHorizontal="26dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/view_members"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <include layout="@layout/line_margin"/>

        <TextView
            android:id="@+id/leave_thread"
            android:paddingVertical="15dp"
            android:paddingHorizontal="26dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/leave_thread"
            android:textColor="@color/orange_light"
            android:textSize="18sp" />

        <include layout="@layout/line_margin"/>

        <TextView
            android:id="@+id/close_thread"
            android:paddingVertical="15dp"
            android:paddingHorizontal="26dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/close_thread"
            android:textColor="@color/orange_yellow"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>