<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_bg"
    tools:context=".CreateFlashcardCollection">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">s

        <TextView
            android:id="@+id/cfcTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_nflashcard_collection"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_medium"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="27dp"
            android:layout_marginStart="26dp"/>

        <TextView
            android:id="@+id/cnTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="51dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/collection_name"
            android:textColor="@color/purple_light"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cfcTitle"
            app:layout_constraintVertical_bias="0" />

        <EditText
            android:id="@+id/collectionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/biology"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:backgroundTint="@color/purple_light"
            android:textColorHint="@color/purple_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cnTitle"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="7dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/save_cancel" />

</RelativeLayout>